z-index fix

--- a/client/src/containers/artist/header/artist-header.scss
+++ b/client/src/containers/artist/header/artist-header.scss
@@ -461,7 +461,7 @@
       position: absolute;
       display: none;
       padding: 0.5rem 1rem;
-      z-index: 300;
+      z-index: 1005;
       box-shadow: 1px 1px 3px $gray-light;
       width: 350px;
       bottom: 100%;
